Commerce/Commerce/src/main/resources/backend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: backend
  labels:
    name: backend
spec:
  ports:
    - nodePort: 30163
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: backend
  type: NodePort
