Commerce/Commerce/src/main/resources/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-sv
  labels:
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 30010
