Commerce/Commerce/src/main/resources/postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-sv
  labels:
    app: postgres
    tier: database
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
    tier: database
