Commerce/Commerce/src/main/resources/ingress.yaml
#Optional, also requires https://kubernetes.github.io/ingress-nginx/deploy/#bare-metal-clusters
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-sv
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-sv
            port:
              number: 80
